css/task-dialog.css
body main:has(dialog[open]) {
    overflow: hidden;
}

dialog {
    border: none;
    width: 90%;
    max-width: calc(25rem + (2*var(--padding-side)));
    height: min(700px, calc(100vh - 152px));
    position: fixed;
    z-index: 1100;
    top: 50%;
    left: 50%;
    opacity: 0;
    border-radius: var(--main-radius);
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);

    &::backdrop {
        background-color: rgba(0, 0, 0, 0.1);
        backdrop-filter: blur(1px);
    }
}

.dialog-swipe-in {
    animation: dialogSwipeIn 300ms ease-in-out forwards
}

@keyframes dialogSwipeIn {
    100% {
        opacity: 1;
        transform: translateX(-50%) translateY(-50%);

    }
}

.dialog-content {
    background-color: white;
    display: flex;
    flex-direction: column;
    width: 100%;
    height: min(700px, calc(100vh - 152px));
    padding: 1.5rem 1rem;

    section {
        display: flex;
        flex-direction: column;
        flex: 1;
        height: 100%;
    }

}

h2 {
    font-size: 1.5rem;
    line-height: 120%;
}

.d-card-header {
    display: flex;
    align-items: center;
    justify-content: space-between;
    flex-direction: row;
}

.close-dialog {
    height: 24px;
    width: 24px;
    background: url(../assets/icons/close_blue.svg) center center no-repeat;

    &:hover {
        cursor: pointer;
        background: url(../assets/icons/close_blue_hover.svg) center center no-repeat;
    }
}

.d-card-headline {
    height: auto;
    width: 100%;
    margin: 1rem 0 .5rem 0;
}

.d-due-date-prio {
    display: flex;
    align-items: center;
    width: 100%;
    margin: .5rem 0;
    height: 1.25rem;

    p {
        width: 6rem;
    }
}

.p-prio {
    margin-right: .5rem;
}

strong {
    color: var(--color-menu-item);
}

.d-prio-icon {
    height: 20px;
    width: 20px;
    background: url(../assets/priority_icons/prio_medium_colored.svg) center center no-repeat;
}

.d-assigned-to {
    margin-top: .5rem;
    overflow: visible;
}

.d-assigned-members {
    border: none;
    width: 100%;
    max-height: 16rem;
    margin-top: .5rem;
    overflow: auto;
}

.d-assigned-member-cards {
    display: flex;
    align-items: center;
    gap: 1rem;
    padding: .25rem .5rem;
    border-radius: .6125rem;
    height: 3rem;
    width: 100%;
    border: none;

    &:hover {
        cursor: pointer;
        background-color: var(--main-color);
        color: white;
    }

    &:active {
        background-color: var(--main-color);
        color: white;
    }
}

.d-assigned-member-icon {
    height: 36px;
    width: 36px;
    border-radius: 999px;
    border: 1px solid var(--color-primary-button-click);
    display: flex;
    align-items: center;
    justify-content: center;
    color: var(--color-primary-button-click);
    font-size: .75rem;
}

.d-subtasks {
    margin-top: .5rem;
    overflow: visible;

    p {
        width: 100%;
    }
}

.d-subtasks-check {
    display: flex;
    flex-direction: column;
    row-gap: .5rem;
    margin-top: .5rem;
    width: 100%;
    max-height: 6rem;
    border: none;
    overflow: auto;

}

.d-subtask {
    display: flex;
    align-items: center;

    label {
        cursor: pointer;
        display: flex;
        align-items: center;

        &::before {
            content: url(../assets/icons/unchecked.svg);
            transform: scale(1);
            width: 1rem;
            height: 1rem;
            margin: 0 1rem 0 .5rem;

            &:hover {
                cursor: pointer;
            }

        }
    }

    input[type="checkbox"] {
        display: none;
        height: 100%;
        margin: 0 1rem 0 .5rem;
        cursor: pointer;
        opacity: 0.5;
        position: absolute;

        &:hover+label::before {
            cursor: pointer;
        }

        &:checked+label::before {
            content: url(../assets/icons/checked.svg);
        }
    }
}

.d-card-footer {
    display: flex;
    align-items: center;
    justify-content: flex-end;
}

.d-card-footer-d {
    display: flex;
    align-items: center;
    height: 24px;

    &::before {
        content: '';
        display: flex;
        align-items: center;
        justify-content: center;
        width: 24px;
        height: 24px;
        background: url('../assets/icons/delete.svg') center center no-repeat;
        transform: scale(1);
        margin-right: 0.5rem;
    }

    &::after {
        content: '';
        height: 24px;
        border: 1px solid var(--color-border-gray);
        margin: 0 .5rem;

    }

    &:hover {
        cursor: pointer;
    }

    &:active {
        &::before {
            background-image: url('../assets/icons/delete_clicked.svg') center center no-repeat;
        }

        color: var(--main-color);
        font-weight: 700;
    }

}

.d-card-footer-e {
    display: flex;
    align-items: center;
    height: 24px;
    width: 60px;

    &::before {
        content: '';
        display: flex;
        align-items: center;
        justify-content: center;
        width: 24px;
        height: 24px;
        background-image: url(../assets/icons/edit.svg);
        background-size: contain;
        background-repeat: no-repeat;
        background-position: center;
        transform: scale(1);
        margin-right: 0.5rem;
    }

    &:hover {
        cursor: pointer;
    }

    &:active {
        &::before {
            background-image: url('../assets/icons/edit_clicked.svg');
        }

        color: var(--main-color);
        font-weight: 700;
    }
}

@media (width < 500px) {
    .d-assigned-members {
        max-height: 6rem;
    }

    .d-subtasks-check {
        max-height: 3rem;
    }

    dialog {
        transform: translateX(50%) translateY(-50%);

        p {
            font-size: 0.75rem;
        }

        section {
            overflow: auto;
        }
    }

    .d-due-date-prio {
        margin: .25rem 0;
    }

    .d-subtask {
        display: flex;
        align-items: center;

        label {
            font-size: 12px;

            &::before {
                transform: scale(0.8);
            }
        }
    }

    .card-swap-icon {
        visibility: visible;
    }
}

@media (width > 500px) {
    dialog {
        transform: translateX(-50%) translateY(100%);
    }
}

